--- a/templates/login.html
+++ b/templates/login.html
@@ -4,13 +4,14 @@
 
 {%block body%}
 
-<h1>LOG IN</h1>
+<h1>LAUNCH COMMAND</h1>
+<h2>Track upcoming rocket launches</h2>
 
     <div class="form">
       <div id="login">   
-        <h1>Welcome Back!</h1>
+        <h2>Log in</h2>
         
-        <form action="/" method="post">
+        <form action="/login" method="post">
         
           <div class="field-wrap">
           <label>
@@ -28,7 +29,9 @@
         
         <p class="forgot"><a href="#">Forgot Password?</a></p>
         
-        <button class="button button-block"/>Log In</button>
+        <button type="submit">Log In</button>
+
+        <p><a href="/register">Create a free account</a></p>
         
         </form>
 
