--- a/templates/upcoming_launches.html
+++ b/templates/upcoming_launches.html
@@ -2,25 +2,31 @@
 
 {% block title %} homepage{%endblock%}
 
+
 {%block body%}
 
 
-
-<h2>Navigation</h2>
-
-<li><a href="/upcoming">Upcoming Launches<a></li> 
+<li><a href="/logout">LOGOUT<a></li> 
+<li><a href="/my_launches">MY LAUNCHES<a></li> 
 
 <h1>UPCOMING LAUNCHES</h1>
 
 <!-- Sometimes images show sometimes they don't -->
 {% for launch in launches %}
+
 <ul>
-    <li><img src="{{launch.image}}" width="350"px></li>
+
+    <li><img src="{{launch.image}}" width="250"px></li>
     <li>{{launch.name}}</li>
     <li>{{launch.window_start}}</li>
     <li>{{launch.status_name}}</li>
     <li>{{launch.pad_location}}</li>
     <li><a href="{{launch.wiki_url}}">More info</a></li>
+
+    <form action="/add_launch" method="POST">
+    <input id="follow_input" name="launch" type="hidden" value="{{launch.upcomingLaunch_id}}">
+    <button id=follow type="submit" class="save" value="{{launch.upcomingLaunch_id}}">Follow</button>
+    </form>
 
 </ul>
 {% endfor %}
