update - remove autocomplete from form

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,25 +15,25 @@
         <label>
             First Name<span class="req">*</span>
           </label>
-          <input type="text" name = "firstName" required autocomplete="on" />
+          <input type="text" name = "firstName"/>
         </div>
           <label>
             Last Name<span class="req">*</span>
           </label>
-          <input type="text" name = "lastName" required autocomplete="off"/>
+          <input type="text" name = "lastName"/>
         </div>
       </div>
         <label>
           Email Address<span class="req">*</span>
         </label>
-        <input type="email" name = "email" required autocomplete="off"/>
+        <input type="email" name = "email"/>
       </div>
 
       <div class="field-wrap">
         <label>
           Mobile Number
         </label>
-        <input type="phone" name="phone" required autocomplete="off"/>
+        <input type="phone" name="phone"/>
       </div>
       
       <div class="field-wrap">
@@ -54,7 +54,7 @@
       
     </form>
 
-       <p><a href="/login">Create a free account</a></p>
+       <p><a href="/">Log in</a></p>
 
 
 
