--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,21 @@
 <!Doctype html>
 <html>
+    {% block head %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-      {% block title %}{% endblock %}
-    </title>
-
-    {% block head %}{% endblock %}
+    <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.js"
+    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"
+  ></script>
+
+
+    
   </head>
+  {% endblock %}
   <body>
 
     {% with messages = get_flashed_messages() %}
@@ -28,6 +34,7 @@
     {% block body %}{% endblock %}
 
     {% block after_body %}{% endblock %}
+    
   </body>
 </html>
 
