add nav link to all news

--- a/templates/upcoming_launches.html
+++ b/templates/upcoming_launches.html
@@ -7,7 +7,8 @@
 
 
 <li><a href="/logout">LOGOUT<a></li> 
-<li><a href="/my_launches">MY LAUNCHES<a></li> 
+<li><a href="/my_launches">MY LAUNCHES<a></li>
+<li><a href="/all_news">Latest News<a></li>  
 
 <h1>UPCOMING LAUNCHES</h1>
 
