add nav link to all news

--- a/templates/my_launches.html
+++ b/templates/my_launches.html
@@ -9,6 +9,7 @@
 <li><a href="/upcoming">HOME<a></li> 
 <li><a href="/logout">LOGOUT<a></li> 
 <li><a href="/upcoming">UPCOMING LAUNCHES<a></li> 
+<li><a href="/all_news">Latest News<a></li> 
 
 <h1>MY LAUNCHES</h1>
 
