update nav links to include news

--- a/templates/all_news.html
+++ b/templates/all_news.html
@@ -5,10 +5,13 @@
 
 {%block body%}
 
-
-<li><a href="/upcoming">HOME<a></li> 
-<li><a href="/logout">LOGOUT<a></li> 
-<li><a href="/upcoming">UPCOMING LAUNCHES<a></li> 
+<div>
+    <li class ="nav-item"><a class="nav-link" href="/upcoming">HOME<a></li> 
+    <li class ="nav-item"><a class="nav-link" href="/logout">LOGOUT<a></li> 
+    <li class ="nav-item"><a class="nav-link" href="/upcoming">UPCOMING LAUNCHES<a></li>
+    <li class ="nav-item"><a class="nav-link" href="/my_launches">MY LAUNCHES<a></li> 
+    <li class ="nav-item"><a class="nav-link" href="/my_news">MY NEWS<a></li> 
+</div>
 
 <h1>LATEST NEWS</h1>
 
