--- a/templates/my_launches.html
+++ b/templates/my_launches.html
@@ -5,15 +5,17 @@
 
 {%block body%}
 
+<div>
+    <li class ="nav-item"><a class="nav-link" href="/upcoming">HOME<a></li> 
+    <li class ="nav-item"><a class="nav-link" href="/logout">LOGOUT<a></li> 
+    <li class ="nav-item"><a class="nav-link" href="/upcoming">UPCOMING LAUNCHES<a></li> 
+    <li class ="nav-item"><a class="nav-link" href="/all_news">LATEST NEWS<a></li> 
+    <li class ="nav-item"><a class="nav-link" href="/my_news">MY NEWS<a></li> 
 
-<li><a href="/upcoming">HOME<a></li> 
-<li><a href="/logout">LOGOUT<a></li> 
-<li><a href="/upcoming">UPCOMING LAUNCHES<a></li> 
-<li><a href="/all_news">Latest News<a></li> 
+</div>
 
 <h1>MY LAUNCHES</h1>
 
-<!-- Sometimes images show sometimes they don't -->
 {% for launch in my_launches %}
 
 <ul>
