--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,7 +5,15 @@
 {%block body%}
 
 <h1>LAUNCH COMMAND</h1>
-<h2>Track upcoming rocket launches</h2>
+<h3>Track upcoming rocket launches</h3><br>
+
+<div>
+<h2>NEXT LAUNCH IN:</h2>
+
+<H1 id ="demo"></H1>
+</div><br>
+
+
 
     <div class="form">
     
@@ -32,7 +40,36 @@
 
     </div>
       
-  
-    <script src="/static/js.js"></script>
+    <script>
+        // Set the date we're counting down to
+        const countDownDate = new Date("2020-11-22 03:17:00+00:00").getTime();
+        
+        // Update the count down every 1 second
+        const x = setInterval(function() {
+        
+          // Get today's date and time
+          const now = new Date().getTime();
+            
+          // Find the distance between now and the count down date
+          const distance = countDownDate - now;
+            
+          // Time calculations for days, hours, minutes and seconds
+          const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+          const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+          const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+          const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+            
+          // Output the result in an element with id="demo"
+          document.getElementById("demo").innerHTML = days + "d : " + hours + "h "
+          + minutes + "m " + seconds + "s ";
+            
+          // If the count down is over, write some text 
+          if (distance < 0) {
+            clearInterval(x);
+            document.getElementById("demo").innerHTML = "ENDED";
+          }
+        }, 1000);
+        </script>
+    <!-- <script src="/static/js.js"></script> -->
 
 {%endblock%}
