--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,8 @@
         {% for message in messages %}
 
         <div class="alert alert-info alert-dismissible" role="alert">
-           <button type="button" class="close" data-dismiss="alert" aria-label="close">close</button> 
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span>
+            </button> 
            {{message}}
         </div>
         
@@ -34,7 +35,14 @@
     {% block body %}{% endblock %}
 
     {% block after_body %}{% endblock %}
+    <script>
+    $("document").ready(function(){
+        setTimeout(function(){
+            $("div.alert").remove();
+        }, 2000 ); // 5 secs
     
+    });
+</script>
   </body>
 </html>
 
