--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         {% for message in messages %}
 
         <div class="alert alert-info alert-dismissible" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span>
+            <button type="button" class="close" data-dismiss="alert">
             </button> 
            {{message}}
         </div>
