--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,13 +6,15 @@
 
 {%block body%}
 
+
 <h1>LAUNCH COMMAND</h1>
 <h3>Track upcoming rocket launches</h3><br>
 
 <div>
-<h2>NEXT LAUNCH IN:</h2>
+<h2>NEXT LAUNCH:</h2>
 
-<H1 id ="demo"></H1>
+<H1 id="countdown"></H1>
+<h5 id='countdownText'>Days Hours Minutes Seconds</h5>
 </div><br>
 
 
@@ -45,6 +47,11 @@
 
 
 
+    <script type="text/javascript">
+        window.launch = {
+          time: '{{ next_launch_start }}'
+        }
+    </script>
+        
     <script src="{{url_for('static', filename='app.js')}}"></script>
-
 {%endblock%}
