add an element for the rocket name

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,13 +8,12 @@
 
 
 <h1>LAUNCH COMMAND</h1>
-<h3>Track upcoming rocket launches</h3><br>
+<h5>Discover upcoming rocket launches and space agency news</h5><br>
 
 <div>
 <h2>NEXT LAUNCH:</h2>
-
+<h3 id='rocketName'></h3>
 <H1 id="countdown"></H1>
-<H1 class="countdown"></H1>
 <h5 id='countdownText'>Days Hours Minutes Seconds</h5>
 <h3 id='date'></h3>
 </div><br>
