fix date and time formatting

--- a/templates/upcoming_launches.html
+++ b/templates/upcoming_launches.html
@@ -15,15 +15,14 @@
 
 <h1>UPCOMING LAUNCHES</h1>
 
-
 {% for launch in launches %}
 
 <ul>
 
     <li><img src="{{launch.image}}" width="250"px></li>
     <li>{{launch.name}}</li>
-    <li id="liftoff">{{launch.window_start}}</li>
-    <li>{{launch.status_name}}</li>
+    <li id="liftoff">{{launch.window_start.strftime("%B %d %I:%M:%S %p")}}</li>
+    <li>Status: {{launch.status_name}}</li>
     <li>{{launch.pad_location}}</li>
     <li><a href="{{launch.wiki_url}}">More info</a></li>
 
