--- a/templates/upcoming_launches.html
+++ b/templates/upcoming_launches.html
@@ -27,26 +27,26 @@
     <li><a href="{{launch.wiki_url}}">More info</a></li>
 
     <form action="/add_launch" method="POST">
+
     <input id="follow_input" name="launch" type="hidden" value="{{launch.upcomingLaunch_id}}">
-    <button id=follow type="submit" class="save" onclick="myFunction()" value="{{launch.upcomingLaunch_id}}">Follow</button>
+
+    <button id=follow>Follow</button>
     </form>
 
+
+
 </ul>
+{% endfor %}
+
 
 <script>
+    document.getElementById("follow").addEventListener("click", function() {
+      console.log("WERE IN THE CONSOLE")
+      document.getElementById("follow").innerHTML = "Following";
+    });
+    </script>
 
-    function myFunction() {
-        let change = document.getElementById("follow");
-        if (change.innerHTML == "Follow")
-        {
-            change.innerHTML = "Following";
-        }
-        else {
-            change.innerHTML = "Follow";
-        }
-    }
 
-</script>
-{% endfor %}
+
 
 {%endblock%}
