--- a/templates/base.html
+++ b/templates/base.html
@@ -4,17 +4,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
+   
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.js"
-    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"
-  ></script>
-
     
+    <title>{% block title %}{% endblock %}</title>
+
   </head>
   {% endblock %}
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
   <body>
 
     {% with messages = get_flashed_messages() %}
@@ -31,19 +35,23 @@
     {% endif %}
 {% endwith %}
 
-    {% block body %}{% endblock %}
+    {% block body %}
 
-    {% block after_body %}{% endblock %}
-
-    <script>
-    $("document").ready(function(){
-        setTimeout(function(){
-            $("div.alert").remove();
-        }, 2000 ); // 2 secs
     
-    });
-</script>
+    {% endblock %}
 
+    {% block after_body %}
+    <h1>I'm the footer</h1>
+    {% endblock %}
+
+
+<script>
+    $("document").ready(function(){
+    setTimeout(function(){
+        $("div.alert").remove();
+    }, 3000 ); // 2 secs
+});
+</script>
   </body>
 </html>
 
