--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,8 @@
 {%  extends 'base.html' %}
 
-{% block title %} homepage{%endblock%}
+{% block title %} REGISTER {%endblock%}
 
 {%block body%}
-
-
 
     <h1>REGISTER</h1>
       
