--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,10 +1,12 @@
 {%  extends 'base.html' %}
 
 
-{% block title %} Homepage {%endblock%}
 
+{% block title %} Launch Command {%endblock%}
 
-{%block body%}
+{%block nav%}{%endblock%}
+
+{%block body %}
 
 
 <h1>LAUNCH COMMAND</h1>
