--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,23 @@
   {% endblock %}
 
 
+  {%block nav%}
+
+<div>
+    <li class ="nav-item"><a class="nav-link" href="/about">ABOUT</a></li> 
+    <li class ="nav-item"><a class="nav-link" href="/upcoming">HOME</a></li> 
+    <li class ="nav-item"><a class="nav-link" href="/upcoming">UPCOMING LAUNCHES</a></li> 
+    <li class ="nav-item"><a class="nav-link" href="/my_launches">MY LAUNCHES</a></li> 
+
+    <li class ="nav-item"><a class="nav-link" href="/all_news">LATEST NEWS</a></li> 
+    <li class ="nav-item"><a class="nav-link" href="/my_news">MY NEWS</a></li>
+    <li class ="nav-item"><a class="nav-link" href="/logout">LOGOUT</a></li>
+
+</div>
+
+{%endblock%}
+
+
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -37,7 +54,6 @@
 
     {% block body %}
 
-    
     {% endblock %}
 
     {% block after_body %}
