--- a/templates/my_news.html
+++ b/templates/my_news.html
@@ -1,17 +1,9 @@
 {%  extends 'base.html' %}
 
-{% block title %} homepage{%endblock%}
+{% block title %} MY NEWS {%endblock%}
 
 
 {%block body%}
-
-<div>
-    <li class ="nav-item"><a class="nav-link" href="/upcoming">HOME<a></li> 
-    <li class ="nav-item"><a class="nav-link" href="/logout">LOGOUT<a></li> 
-    <li class ="nav-item"><a class="nav-link" href="/upcoming">UPCOMING LAUNCHES<a></li>
-    <li class ="nav-item"><a class="nav-link" href="/my_launches">MY LAUNCHES<a></li> 
-    <li class ="nav-item"><a class="nav-link" href="/all_news">LATEST NEWS<a></li> 
-</div>
 
 <h1>MY LAUNCHES</h1>
 
