add contact info to about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -20,12 +20,15 @@
         <p> Enid Svymbersky is the developer behind Launch Command, which is her capstone project while attending Hackbright Academy. Ever since Enid laid eyes on Saturn from behind the lens of a giant telescope, when she was just 7 years old, she has been fascinated by space flight to other planets. Launch Command was born out of Enid's own personal interest in software engineering, tracking rocket launches and reading up on the latest mars rover news (she thinks robots are pretty cool).
         </p>
 </div>
+
 <div>
     <h2>Contact Info</h2>
         <label>Email</label>
-            <p>You can email Enid at enid.sky@protonmail.com </p>
-        <label>Github</label>
-            <p></p>
+            <p>enid.sky@protonmail.com </p>
+        <label>Find me on:</label><br>
+            <a class="github" href="https://github.com/Enid-Sky">Github</a></li><br>
+            <a class="twitter" href="https://twitter.com/codingsprinkles">Twitter</a></li><br>
+            <a class="twitter" href="https://www.linkedin.com/in/enid-svymbersky/">Linkedin</a></li>
 </div>
 
 
