--- a/templates/all_news.html
+++ b/templates/all_news.html
@@ -11,21 +11,26 @@
 <!-- Sometimes images show sometimes they don't -->
 {% for article in all_news %}
 
-<ul>
+    {% if article.news_id not in saved_news %}
 
-    <li><img src="{{article.image}}" width="250"px></li>
-    <li>{{article.title}}</li>
-    <li>{{article.news_site}}</li>
-    <li>{{article.date}}</li>
-    <li>{{article.summary}}</li>
-    <li><a href="{{article.url}}">More info</a></li>
+        <ul>
+
+            <li><img src="{{article.image}}" width="250"px></li>
+            <li>{{article.title}}</li>
+            <li>{{article.news_site}}</li>
+            <li>{{article.date | formatdatetime}} PST</li>
+            <li>{{article.summary}}</li>
+            <li><a href="{{article.url}}">More info</a></li>
 
 
-    <form action="/add_article" method="POST">
-        <input id="save_article" name="add_article" type="hidden" value="{{article.news_id}}">
-            <button id=add_news type="submit" value="{{article.news_id}}">Add</button>
-    </form>
-</ul>
+            <form action="/add_article" method="POST">
+                <input id="save_article" name="add_article" type="hidden" value="{{article.news_id}}">
+                    <button id=add_news type="submit" value="{{article.news_id}}">Add</button>
+            </form>
+        </ul>
+
+    {%endif%}
+
 {% endfor %}
 
 {%endblock%}
