--- a/templates/about.html
+++ b/templates/about.html
@@ -6,14 +6,14 @@
 
 <h1> ABOUT </h1><br>
     <h2>Welcome to Launch Command!</h2>
-        <p>Here you will find up to date space flight news, and information on future rocket launches from around the world.  Launch command allows you to track allows all orbital launches and popular sub-orbital launches, from innovative agencies including, SPACEX, NASA, ULA, Arianespace, and ROSCOSMOS, just to name a few. 
+        <p>Here you will find up to date space flight news, and information on future rocket launches from around the world.  Launch command allows you to track all orbital launches and popular sub-orbital launches, from innovative agencies including, SPACEX, NASA, ULA, Arianespace, and ROSCOSMOS, just to name a few. 
         </p>
         <p>
         Keep track of the date and time of upcoming rocket launches, read more about the rockets and missions, and get up-to-date flight status. You also have the option of receiving a text reminder of the time and date of the next exciting launch! Finally, save your favorite launches and news articles for later perusing at your pleasure! 
         </p>
 
     
-        <p>Launch Command currently sources data from an open source library powered by the The Space Devs, a group of engineers and space enthusiasts. The API is a collaborative community tool in constant development and updated daily. Moreover, the news articles are sourced from the open source Spaceflight News API. The website runs on Flask, uses Jinja templating, JavaScript on the frontend, and is styled using CSS and Bootstrap.</p>
+        <p>Launch Command currently sources data from an open source library powered by the The Space Devs, a group of engineers and space enthusiasts. The API is a collaborative community tool in constant development and updated daily. Moreover, the news articles are sourced from the open source Spaceflight News API. Twilio Rest API is used to send user's notification on upcoming launches. The tech stack includes: Python, Flask, Jinja, PostgreSQL, SQLAlchemy, JQuery, Bootstrap, Javascript, HTML, and CSS .</p>
 
 <div>
     <h2>About the developer</h2>
