--- a/templates/base.html
+++ b/templates/base.html
@@ -1,64 +1,131 @@
-<!Doctype html>
-<html>
-    {% block head %}
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!doctype html>
+<html lang="en">
     
-    <title>{% block title %}{% endblock %}</title>
+  <head>
+    {% block head %}
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <title>
+        {% block title %}{% endblock %}
+    </title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+ 
+
+
+
+    {% endblock %}
   </head>
-  {% endblock %}
+ 
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+      {% for message in messages %}
 
+          <div class="alert alert-info alert-dismissible" role="alert">
+              <button type="button" class="close" data-dismiss="alert">
+              </button> 
+          {{message}}
+          </div>
+  
+      {%endfor%}
+  {% endif %}
+{% endwith %}
 
-  {%block nav%}
+    {%block nav%}
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+        <a class="navbar-brand" href="/upcoming">Logo</a>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/about">ABOUT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/upcoming">UPCOMING LAUNCHES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/my_launches">MY LAUNCHES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/all_news">LATEST NEWS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/my_news">MY NEWS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">LOGOUT</a>
+          </li>
+        </ul>
+      </nav>
+      
+  <!-- End of Navigation Bar -->
 
-<div>
-    <li class ="nav-item"><a class="nav-link" href="/about">ABOUT</a></li> 
-    <li class ="nav-item"><a class="nav-link" href="/upcoming">HOME</a></li> 
-    <li class ="nav-item"><a class="nav-link" href="/upcoming">UPCOMING LAUNCHES</a></li> 
-    <li class ="nav-item"><a class="nav-link" href="/my_launches">MY LAUNCHES</a></li> 
+        <!-- <div>
 
-    <li class ="nav-item"><a class="nav-link" href="/all_news">LATEST NEWS</a></li> 
-    <li class ="nav-item"><a class="nav-link" href="/my_news">MY NEWS</a></li>
-    <li class ="nav-item"><a class="nav-link" href="/logout">LOGOUT</a></li>
+        </div> -->
 
-</div>
+        
+        
 
-{%endblock%}
-
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    {%endblock%}
 
 
   <body>
 
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        {% for message in messages %}
 
-        <div class="alert alert-info alert-dismissible" role="alert">
-            <button type="button" class="close" data-dismiss="alert">
-            </button> 
-           {{message}}
-        </div>
-        
-        {%endfor%}
-    {% endif %}
-{% endwith %}
 
     {% block body %}
 
+
     {% endblock %}
+
 
     {% block after_body %}
     <h1>I'm the footer</h1>
+    <div class="container">
+        <div class="content"></div>
+        <footer class="row">
+          <div class="sozial col-xs-12 col-sm-6 col-sm-push-6">
+            <ul class="row">
+              <li class="col-xs-6 col-sm-2">
+                <a href="#">
+                  <img class="logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/online_social_media_facebook-128.png">
+                </a>
+              </li>
+              <li class="col-xs-6 col-sm-2">
+                <a href="#">
+                  <img class="logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/twitter_online_social_media-128.png">
+                </a>
+              </li>
+              <li class="col-xs-6 col-sm-2">
+                <a href="#">
+                  <img class="logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/instagram_online_social_media_photo-128.png">
+                </a>
+              </li>
+              <li class="col-xs-6 col-sm-2">
+                <a href="#">
+                  <img class="logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/online_social_media_google_plus-128.png">
+                </a>
+              </li>
+            </ul>
+          </div><!-- Ende Sozial media -->
+          
+          <div class="copyright col-xs-12 col-sm-3 col-sm-pull-6">
+            <p> &copy; Me from now to eternity </p>
+          </div><!-- Ende Copyright -->
+          
+          <div class="impressum col-xs-12 col-sm-3 col-sm-pull-6">
+            <p> An impressive impressum </p>
+            <p> Adresse und so </p>
+          </div><!-- Ende Impressum -->
+        </footer>
+      </div>
     {% endblock %}
+
+
 
 
 <script>
@@ -67,7 +134,19 @@
         $("div.alert").remove();
     }, 3000 ); // 2 secs
 });
+
+
 </script>
+
+
+<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="{{url_for('static', filename='app.js')}}"></script>
+   <!-- Load style CSS -->
+   <link rel="stylesheet" type="text/css" href="static/css/style.css">
+
+
   </body>
 </html>
 
