--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,43 @@
+@import "compass/css3";
+
 
 body{
 background: url(hhttps://images.unsplash.com/photo-1516849841032-87cbac4d88f7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80) no-repeat center center;
 background-size: cover;
+}
+
+.btn-primary {
+    background-color: rgba(0,190,190,1);
+    border: 1px solid rgba(0,190,190,1)
+}
+
+.card {
+
+    box-shadow: 0 1px 100px 0 rgba(0,0,0,.1);
+  }
+
+/* .btn-primary {
+overflow: hidden;
+position: relative;
+width: 200px;
+height: 50px;
+border: 1px solid rgba(0,190,190,1);
+background: rgba(rgba(0,190,190,1),.2);
+}
+
+/* .btn-primary:hover {
+/* @include borderGlow(); */
+/* color: rgba(0,220,220,1);
+background: rgba(rgba(0,220,220,1),.3);
+} */
+
+/*---Media Queries --*/
+@media (max-width: 992px) {
+
+}
+@media (max-width: 768px) {
+
+}
+@media (max-width: 576px) {
+
 }
