--- a/templates/upcoming_launches.html
+++ b/templates/upcoming_launches.html
@@ -5,12 +5,12 @@
 
 
 {%block body%}
-<div class="container-fluid p-3 my-3 bg-dark text-white">
+<div id="upcoming-fluid-container" class="container-fluid p-3 my-3 text-white">
 
 
 <!-- Button to Open the Modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-    Notify
+    Notify Me!
     </button>
     <div class="container">
 
@@ -76,14 +76,16 @@
         
     </div>
 </div> -->
-
-    <div class="container-md">
-        <div class="card mb-4 bg-secondary border border-light" style="max-width: 1000px;">
+<!-- 
+    <div id="upcoming-container" class="container-sm" >
+        <div id="upcoming-card" class="card mb-3 bg-secondary border border-light" id="upcoming-card" style="max-width: 540px;">
             <div class="row no-gutters">
-            <div class="col-md-5">
-                <img src="{{launch.image}}" class="card-image .justify-content-md-center" alt="rocket on launch pad" height="300"px width="379"px>
+            
+            <div class="col-md-4">
+                <img src="{{launch.image}}" id="upcoming-card-image" class="card-image" alt="rocket on launch pad">
             </div>
-                <div class="card-body bg-secondary text-white  ">
+            <div class="col-md-8">
+                <div id="upcoming-card-body" class="card-body text-white">
                 <h4 class="card-title">{{launch.name}}</h4>
                 <p class="card-text" id="liftoff">Liftoff: {{launch.window_start | formatdatetime}} (PST)</p>
                 <p class="card-text" id="liftoff">Status: {{launch.status_name}}</p>
@@ -93,12 +95,44 @@
                         <input id="follow_input" name="launch" type="hidden" value="{{launch.upcomingLaunch_id}}">
                             <button id=follow type="submit" class="btn btn-primary" value="{{launch.upcomingLaunch_id}}">Follow</button>
                     </form>
-            
+                </div>
                 </div>
             </div>
-            <!-- </div> -->
         </div>
-    </div>       
+    </div>        -->
+
+
+
+
+
+    <div id="upcoming-container" class="container-md">
+        <div id="upcoming-overall-card" class="card mb-3 border border-light offset-md-3" style="max-width: 800px;">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="{{launch.image}}" class="card-img p-3 " alt="Rocket on launch pad" style="min-height: 250px;" style="min-width: 250px;">
+                    <p><a href="{{launch.wiki_url}}" class="text-warning offset-md-4" >More info</a></p> 
+                    
+
+                </div>
+                <div class="col-md-8 p-3">
+                <div class="card-body ">
+                  <h5 class="card-title">{{launch.name}}</h5>
+                  <p class="card-text" id="liftoff">Liftoff: {{launch.window_start | formatdatetime}} (PST)</p>
+                  <p class="card-text" id="liftoff">Status: {{launch.status_name}}</p>
+                  <p class="card-text " id="liftoff">Location: {{launch.pad_location}}</p>
+                    
+                  <form action="/add_launch" method="POST">
+                    <input id="follow_input" name="launch" type="hidden" value="{{launch.upcomingLaunch_id}}">
+                        <button id=follow type="submit" class="btn btn-primary" value="{{launch.upcomingLaunch_id}}">Save</button>
+                </form>    
+                </div>
+              </div>
+            </div>
+        </div>
+    <div>
+
+
+
     {%endif%}   
 
 {% endfor %}
